feat: add fisrts user use cases

--- a/src/Net.SimpleBlog.Infra.Data.EF/Net.SimpleBlog.Infra.Data.EF.csproj
+++ b/src/Net.SimpleBlog.Infra.Data.EF/Net.SimpleBlog.Infra.Data.EF.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
+    <ProjectReference Include="..\Net.SimpleBlog.Application\Net.SimpleBlog.Application.csproj" />
+    <ProjectReference Include="..\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
   </ItemGroup>
 
 </Project>
