--- a/tests/Net.SimpleBlog.UnitTests/Net.SimpleBlog.UnitTests.csproj
+++ b/tests/Net.SimpleBlog.UnitTests/Net.SimpleBlog.UnitTests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
   </ItemGroup>
 
 </Project>
