--- a/tests/Net.SimpleBlog.UnitTests/Net.SimpleBlog.UnitTests.csproj
+++ b/tests/Net.SimpleBlog.UnitTests/Net.SimpleBlog.UnitTests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Net.SimpleBlog.Application\Net.SimpleBlog.Application.csproj" />
     <ProjectReference Include="..\..\src\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
   </ItemGroup>
 
