test: add user end-to-end tests

--- a/src/Net.SimpleBlog.Api/appsettings.Migrations.json
+++ b/src/Net.SimpleBlog.Api/appsettings.Migrations.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtConfig": {
+    "Secret": "177adbc9-4224-4889-bb7b-e54b29825374",
+    "Issuer": "NetSimpleBlog",
+    "Audience": "NetSimpleBlogUsers"
+  },
   "ConnectionStrings": {
     "NetSimpleBlogDb": "Server=localhost;Database=netsimpleblogdb;Port=3306;Uid=root;Pwd=N3ts1mpl3bl0g@;"
   }
