--- a/src/Net.SimpleBlog.Api/appsettings.json
+++ b/src/Net.SimpleBlog.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtConfig": {
+    "Secret": "177adbc9-4224-4889-bb7b-e54b29825374",
+    "Issuer": "NetSimpleBlog",
+    "Audience": "NetSimpleBlogUsers"
+  },
   "AllowedHosts": "*"
 }
