--- a/tests/Net.SimpleBlog.E2ETests/Net.SimpleBlog.E2ETests.csproj
+++ b/tests/Net.SimpleBlog.E2ETests/Net.SimpleBlog.E2ETests.csproj
@@ -12,9 +12,9 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.30" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.30" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.3" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -27,8 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Net.SimpleBlog.Application\Net.SimpleBlog.Application.csproj" />
-    <ProjectReference Include="..\..\src\Net.SimpleBlog.Domain\Net.SimpleBlog.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Net.SimpleBlog.Api\Net.SimpleBlog.Api.csproj" />
     <ProjectReference Include="..\..\src\Net.SimpleBlog.Infra.Data.EF\Net.SimpleBlog.Infra.Data.EF.csproj" />
   </ItemGroup>
 
@@ -37,5 +36,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
+  
 </Project>
