--- a/src/Net.SimpleBlog.Api/appsettings.Development.json
+++ b/src/Net.SimpleBlog.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "NetSimpleBlogDb": "Server=netsimpleblogdb;Database=netsimpleblogdb;Port=3306;Uid=root;Pwd=N3ts1mpl3bl0g@;"
+    "NetSimpleBlogDb": "Server=localhost;Database=netsimpleblogdb;Port=3306;Uid=root;Pwd=N3ts1mpl3bl0g@;"
   }
 }
